# photo-ingest-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
integrations/hermes/photoagent/: .env.example  README.md  SOUL.md  config.yaml
photo_ingest_agent/: __init__.py  cli.py
scripts/: date_picker.swift  hermes_photo_bridge.py  photo_ingest_today.command
tests/: make_sample_images.py
