[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-ingest-agent"
version = "0.1.0"
description = "Local macOS photo ingest and Lightroom Auto Import staging assistant."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
photo-agent = "photo_ingest_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["photo_ingest_agent*"]
